--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,9 +8,7 @@ resources:
 jobs:
 - template: build.yml@templates  # Template reference
   parameters:
-    rosdistro: melodic
+    rosdistro: humble
     metapackage: desktop
-    custom_version: '20200501.1.0'  # Optional; default is `latest`.
-    custom_test_target: 'run_tests'  # Optional; default is `run_tests`.
     platforms:
       - linux
